--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class = "container">
-        <h1>Random People Information</h1>
+        <h1>Random People Table</h1>
+        <div id="table-scroll">
         <table class="table1">
             <thead>
                 <tr>
@@ -26,6 +27,7 @@
                     <td>Peter</td> <td>Woe</td>  <td>20</td>   </tr>
             </tbody>
         </table>
+        </div>
     </div>
     <div class="cont-input">
     <input type="text" id="name" placeholder="Enter Name">
