made more accessible and added meta description !

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">  <title>Tables week 4</title>
+    <link rel="stylesheet" href="styles.css">
+ <title>Tables week 4</title>
+    <meta name="description" content="Easily manage and track people with our user-friendly table. Add names, surnames, and ages, and keep your data organized. The table is beautifully designed and allows for easy scrolling for larger datasets.">
 </head>
 <body>
     <div class = "container">
