--- a/index.html
+++ b/index.html
@@ -1,41 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
- <title>Tables week 4</title>
-    <meta name="description" content="Easily manage and track people with our user-friendly table. Add names, surnames, and ages, and keep your data organized. The table is beautifully designed and allows for easy scrolling for larger datasets.">
+    <title>Different Fonts</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-size: 1.7rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f8dedd; 
+            color: #6a0573;
+        }
+        .content {
+            border: 3px #6a0573 solid;
+            outline: 3px #f8dedd solid; 
+            padding: 1rem;
+            text-align: center;
+            max-width: 65rem;
+        }
+        .lora {
+            font-family: 'Lora', serif;
+        }
+        .raleway {
+            font-family: 'Raleway', sans-serif;
+        }
+        .playfair {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.6rem;
+        }
+        h1 {
+            color: #6a0573;
+        }
+        .underline {
+            text-decoration: underline;
+            color: #6a0573; 
+            font-weight: bold;
+        }
+        p {
+        white-space: nowrap; 
+        overflow-x: auto;
+    }
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: transparent; 
+    }
+ 
+    ::-webkit-scrollbar-thumb {
+        background: linear-gradient(45deg, #6a0573, #f8dedd); 
+        border-radius: 10px;
+        transition: background 0.3s ease-in-out;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: linear-gradient(45deg, #4c0252, #ddc3c2); 
+    }
+
+    </style>
 </head>
 <body>
-    <div class = "container">
-        <h1>Random People Table</h1>
-        <div id="table-scroll">
-        <table class="table1">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Surname</th>
-                    <th>Age</th>
-                </tr>
-            </thead>
-            <tbody id="table-body">
-                
-                <tr>
-                    <td>John</td> <td>Doe</td>  <td>30</td>   </tr>
-                  <tr>
-                    <td>Jane</td> <td>Hoe</td>  <td>25</td>   </tr>
-                  <tr>
-                    <td>Peter</td> <td>Woe</td>  <td>20</td>   </tr>
-            </tbody>
-        </table>
-        </div>
+    <div class="content">
+        <h1>Different Fonts</h1>
+        <p class="lora"><span class="underline">LORA</span> -> Lorem ipsum dolor sit amet, consectetur adipiscing elit. ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<- <span class="underline">LORA</span></p>
+        <p class="raleway"><span class="underline">RALEWAY</span> -> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <- <span class="underline">RALEWAY</span></p>
+        <p class="playfair"><span class="underline">PLAYFAIR DISPLAY</span> -> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <- <span class="underline">PLAYFAIR DISPLAY</span></p>
     </div>
-    <div class="cont-input">
-    <input type="text" id="name" placeholder="Enter Name">
-    <input type="text" id="surname" placeholder="Enter Surname">
-    <input type="number" id="age" placeholder="Enter Age">
-    <button id="add-person"> Add Person</button>
-    </div>
-    <script src="script.js"></script>  </body>
+</body>
 </html>
